--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".PerfilTrabajadorActivity" />
         <activity android:name=".PerfilClienteActivity" />
         <activity android:name=".ListadoPropuestasActivity" />
-
+        <activity android:name=".DetallePropuestaActivity" />
 
     </application>
 
