Visualizacion de solicitudes y aceptacion de solicitud

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".PerfilClienteActivity" />
         <activity android:name=".ListadoPropuestasActivity" />
         <activity android:name=".DetallePropuestaActivity" />
-
+        <activity android:name=".ListadoSolicitudesTrabajadorActivity" />
     </application>
 
 </manifest>
