--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".DetallePropuestaActivity" />
         <activity android:name=".ListadoSolicitudesTrabajadorActivity" />
         <activity android:name=".ListadoSolicitudesAceptadasActivity" />
+        <activity android:name=".ListadoCalificacionesTrabajadorActivity" />
     </application>
 
 </manifest>
